--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -72,15 +72,16 @@ am__objects_1 = analyzedlg.$(OBJEXT) audio.$(OBJEXT) \
 	dbdialog.$(OBJEXT) evalgraph.$(OBJEXT) figuredlg.$(OBJEXT) \
 	goboard.$(OBJEXT) gogame.$(OBJEXT) gamedialog.$(OBJEXT) \
 	gamestable.$(OBJEXT) gametree.$(OBJEXT) grid.$(OBJEXT) \
-	helpviewer.$(OBJEXT) igsconnection.$(OBJEXT) \
-	imagehandler.$(OBJEXT) main.$(OBJEXT) clientwin.$(OBJEXT) \
-	mainwindow.$(OBJEXT) misc.$(OBJEXT) msg_handler.$(OBJEXT) \
-	parser.$(OBJEXT) playertable.$(OBJEXT) preferences.$(OBJEXT) \
-	qgo.$(OBJEXT) qgo_interface.$(OBJEXT) qgtp.$(OBJEXT) \
-	newaigamedlg.$(OBJEXT) setting.$(OBJEXT) sgfload.$(OBJEXT) \
-	sgf2board.$(OBJEXT) sgfpreview.$(OBJEXT) slideview.$(OBJEXT) \
-	svgbuilder.$(OBJEXT) tables.$(OBJEXT) telnet.$(OBJEXT) \
-	textview.$(OBJEXT) timing.$(OBJEXT) variantgamedlg.$(OBJEXT)
+	greeterwindow.$(OBJEXT) helpviewer.$(OBJEXT) \
+	igsconnection.$(OBJEXT) imagehandler.$(OBJEXT) main.$(OBJEXT) \
+	clientwin.$(OBJEXT) mainwindow.$(OBJEXT) misc.$(OBJEXT) \
+	msg_handler.$(OBJEXT) parser.$(OBJEXT) playertable.$(OBJEXT) \
+	preferences.$(OBJEXT) qgo.$(OBJEXT) qgo_interface.$(OBJEXT) \
+	qgtp.$(OBJEXT) newaigamedlg.$(OBJEXT) setting.$(OBJEXT) \
+	sgfload.$(OBJEXT) sgf2board.$(OBJEXT) sgfpreview.$(OBJEXT) \
+	slideview.$(OBJEXT) svgbuilder.$(OBJEXT) tables.$(OBJEXT) \
+	telnet.$(OBJEXT) textview.$(OBJEXT) timing.$(OBJEXT) \
+	variantgamedlg.$(OBJEXT)
 am__objects_2 =
 am_q5go_OBJECTS = $(am__objects_1) $(am__objects_2)
 am__objects_3 = analyzedlg.moc.$(OBJEXT) audio.moc.$(OBJEXT) \
@@ -89,17 +90,18 @@ am__objects_3 = analyzedlg.moc.$(OBJEXT) audio.moc.$(OBJEXT) \
 	clockview.moc.$(OBJEXT) dbdialog.moc.$(OBJEXT) \
 	evalgraph.moc.$(OBJEXT) figuredlg.moc.$(OBJEXT) \
 	gamedialog.moc.$(OBJEXT) gamestable.moc.$(OBJEXT) \
-	gametree.moc.$(OBJEXT) helpviewer.moc.$(OBJEXT) \
-	igsconnection.moc.$(OBJEXT) mainwindow.moc.$(OBJEXT) \
-	clientwin.moc.$(OBJEXT) miscdialogs.moc.$(OBJEXT) \
-	msg_handler.moc.$(OBJEXT) normaltools.moc.$(OBJEXT) \
-	scoretools.moc.$(OBJEXT) parser.moc.$(OBJEXT) \
-	playertable.moc.$(OBJEXT) preferences.moc.$(OBJEXT) \
-	qgo.moc.$(OBJEXT) qgo_interface.moc.$(OBJEXT) \
-	qgtp.moc.$(OBJEXT) sizegraphicsview.moc.$(OBJEXT) \
-	slideview.moc.$(OBJEXT) sgfpreview.moc.$(OBJEXT) \
-	tables.moc.$(OBJEXT) telnet.moc.$(OBJEXT) \
-	textview.moc.$(OBJEXT) variantgamedlg.moc.$(OBJEXT)
+	gametree.moc.$(OBJEXT) greeterwindow.moc.$(OBJEXT) \
+	helpviewer.moc.$(OBJEXT) igsconnection.moc.$(OBJEXT) \
+	mainwindow.moc.$(OBJEXT) clientwin.moc.$(OBJEXT) \
+	miscdialogs.moc.$(OBJEXT) msg_handler.moc.$(OBJEXT) \
+	normaltools.moc.$(OBJEXT) scoretools.moc.$(OBJEXT) \
+	parser.moc.$(OBJEXT) playertable.moc.$(OBJEXT) \
+	preferences.moc.$(OBJEXT) qgo.moc.$(OBJEXT) \
+	qgo_interface.moc.$(OBJEXT) qgtp.moc.$(OBJEXT) \
+	sizegraphicsview.moc.$(OBJEXT) slideview.moc.$(OBJEXT) \
+	sgfpreview.moc.$(OBJEXT) tables.moc.$(OBJEXT) \
+	telnet.moc.$(OBJEXT) textview.moc.$(OBJEXT) \
+	variantgamedlg.moc.$(OBJEXT)
 am__objects_4 = $(am__objects_2) $(am__objects_3)
 am__objects_5 = q4go.rcc.$(OBJEXT)
 am__objects_6 = $(am__objects_5)
@@ -280,9 +282,9 @@ INCLUDES = $(all_includes)
 q5go_METASOURCES = AUTO
 KDE_OPTIONS = qtonly
 DISTHEADERS_MOC = analyzedlg.h audio.h autodiagsdlg.h bitarray.h board.h clickableviews.h \
-	clockview.h dbdialog.h evalgraph.h figuredlg.h gamedialog.h gamestable.h gametree.h helpviewer.h \
-	igsconnection.h mainwindow.h clientwin.h miscdialogs.h msg_handler.h normaltools.h scoretools.h \
-	parser.h playertable.h preferences.h qgo.h qgo_interface.h qgtp.h sizegraphicsview.h \
+	clockview.h dbdialog.h evalgraph.h figuredlg.h gamedialog.h gamestable.h gametree.h greeterwindow.h \
+	helpviewer.h igsconnection.h mainwindow.h clientwin.h miscdialogs.h msg_handler.h normaltools.h \
+	scoretools.h parser.h playertable.h preferences.h qgo.h qgo_interface.h qgtp.h sizegraphicsview.h \
 	slideview.h sgfpreview.h tables.h telnet.h textview.h variantgamedlg.h
 
 DISTHEADERS_NOMOC = goboard.h config.h defines.h grid.h goboard.h gogame.h gs_globals.h \
@@ -291,7 +293,7 @@ DISTHEADERS_NOMOC = goboard.h config.h defines.h grid.h goboard.h gogame.h gs_gl
 
 DISTSOURCES = analyzedlg.cpp audio.cpp autodiagsdlg.cpp board.cpp clockview.cpp dbdialog.cpp evalgraph.cpp \
 		figuredlg.cpp goboard.cc gogame.cc gamedialog.cpp gamestable.cpp gametree.cpp grid.cpp \
-		helpviewer.cpp igsconnection.cpp imagehandler.cpp main.cpp \
+		greeterwindow.cpp helpviewer.cpp igsconnection.cpp imagehandler.cpp main.cpp \
 		clientwin.cpp mainwindow.cpp \
 		misc.cpp msg_handler.cpp parser.cpp \
 		playertable.cpp preferences.cpp qgo.cpp qgo_interface.cpp qgtp.cpp \
@@ -299,7 +301,8 @@ DISTSOURCES = analyzedlg.cpp audio.cpp autodiagsdlg.cpp board.cpp clockview.cpp 
 		slideview.cpp svgbuilder.cpp tables.cpp telnet.cpp textview.cpp timing.cpp variantgamedlg.cpp
 
 FORMS = analyze_gui.ui autodiags_gui.ui boardwindow_gui.ui clientwindow_gui.ui dbdialog_gui.ui enginedlg_gui.ui \
-	figuredlg_gui.ui gameinfo_gui.ui gui_dialog.ui newgame_gui.ui newlocalgame_gui.ui newvariantgame_gui.ui \
+	figuredlg_gui.ui gameinfo_gui.ui gui_dialog.ui greeterwindow_gui.ui \
+	newgame_gui.ui newlocalgame_gui.ui newvariantgame_gui.ui \
 	normaltools_gui.ui nthmove_gui.ui preferences_gui.ui newaigamedlg_gui.ui scoretools_gui.ui \
 	slideview_gui.ui svgview_gui.ui sgfpreview.ui talk_gui.ui textedit_gui.ui twoaigamedlg_gui.ui \
 	textview_gui.ui
@@ -431,6 +434,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gametree.moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/goboard.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gogame.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/greeterwindow.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/greeterwindow.moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/grid.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/helpviewer.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/helpviewer.moc.Po@am__quote@
