--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,7 +10,7 @@ DISTHEADERS_MOC = analyzedlg.h audio.h autodiagsdlg.h bitarray.h board.h clickab
 	clockview.h dbdialog.h evalgraph.h figuredlg.h gamedialog.h gamestable.h gametree.h greeterwindow.h \
 	helpviewer.h igsconnection.h mainwindow.h clientwin.h miscdialogs.h msg_handler.h normaltools.h \
 	scoretools.h parser.h playertable.h preferences.h qgo.h qgo_interface.h qgtp.h sizegraphicsview.h \
-	slideview.h sgfpreview.h tables.h telnet.h textview.h variantgamedlg.h
+	slideview.h sgfpreview.h tables.h telnet.h textview.h tutorial.h variantgamedlg.h
 
 DISTHEADERS_NOMOC = goboard.h config.h defines.h grid.h goboard.h gogame.h gs_globals.h \
 	imagehandler.h komispinbox.hm isc.h newaigamedlg.h setting.h sgf.h sgfparser.h \
@@ -29,8 +29,8 @@ FORMS = analyze_gui.ui autodiags_gui.ui boardwindow_gui.ui clientwindow_gui.ui d
 	figuredlg_gui.ui gameinfo_gui.ui gui_dialog.ui greeterwindow_gui.ui \
 	newgame_gui.ui newlocalgame_gui.ui newvariantgame_gui.ui \
 	normaltools_gui.ui nthmove_gui.ui preferences_gui.ui newaigamedlg_gui.ui scoretools_gui.ui \
-	slideview_gui.ui svgview_gui.ui sgfpreview.ui talk_gui.ui textedit_gui.ui twoaigamedlg_gui.ui \
-	textview_gui.ui
+	slideshow_gui.ui slideview_gui.ui slideshow_gui.ui svgview_gui.ui sgfpreview.ui talk_gui.ui \
+	textedit_gui.ui textview_gui.ui tutorial.cpp twoaigamedlg_gui.ui
 
 RESOURCES = q4go.qrc
 
