--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -84,7 +84,8 @@ am__objects_1 = analyzedlg.$(OBJEXT) audio.$(OBJEXT) \
 	variantgamedlg.$(OBJEXT)
 am__objects_2 =
 am_q5go_OBJECTS = $(am__objects_1) $(am__objects_2)
-am__objects_3 = analyzedlg.moc.$(OBJEXT) audio.moc.$(OBJEXT) \
+am__objects_3 = tutorial.$(OBJEXT)
+am__objects_4 = analyzedlg.moc.$(OBJEXT) audio.moc.$(OBJEXT) \
 	autodiagsdlg.moc.$(OBJEXT) bitarray.moc.$(OBJEXT) \
 	board.moc.$(OBJEXT) clickableviews.moc.$(OBJEXT) \
 	clockview.moc.$(OBJEXT) dbdialog.moc.$(OBJEXT) \
@@ -101,11 +102,11 @@ am__objects_3 = analyzedlg.moc.$(OBJEXT) audio.moc.$(OBJEXT) \
 	sizegraphicsview.moc.$(OBJEXT) slideview.moc.$(OBJEXT) \
 	sgfpreview.moc.$(OBJEXT) tables.moc.$(OBJEXT) \
 	telnet.moc.$(OBJEXT) textview.moc.$(OBJEXT) \
-	variantgamedlg.moc.$(OBJEXT)
-am__objects_4 = $(am__objects_2) $(am__objects_3)
-am__objects_5 = q4go.rcc.$(OBJEXT)
-am__objects_6 = $(am__objects_5)
-nodist_q5go_OBJECTS = $(am__objects_4) $(am__objects_6)
+	tutorial.moc.$(OBJEXT) variantgamedlg.moc.$(OBJEXT)
+am__objects_5 = $(am__objects_3) $(am__objects_4)
+am__objects_6 = q4go.rcc.$(OBJEXT)
+am__objects_7 = $(am__objects_6)
+nodist_q5go_OBJECTS = $(am__objects_5) $(am__objects_7)
 q5go_OBJECTS = $(am_q5go_OBJECTS) $(nodist_q5go_OBJECTS)
 am__DEPENDENCIES_1 =
 q5go_DEPENDENCIES = $(am__DEPENDENCIES_1)
@@ -285,7 +286,7 @@ DISTHEADERS_MOC = analyzedlg.h audio.h autodiagsdlg.h bitarray.h board.h clickab
 	clockview.h dbdialog.h evalgraph.h figuredlg.h gamedialog.h gamestable.h gametree.h greeterwindow.h \
 	helpviewer.h igsconnection.h mainwindow.h clientwin.h miscdialogs.h msg_handler.h normaltools.h \
 	scoretools.h parser.h playertable.h preferences.h qgo.h qgo_interface.h qgtp.h sizegraphicsview.h \
-	slideview.h sgfpreview.h tables.h telnet.h textview.h variantgamedlg.h
+	slideview.h sgfpreview.h tables.h telnet.h textview.h tutorial.h variantgamedlg.h
 
 DISTHEADERS_NOMOC = goboard.h config.h defines.h grid.h goboard.h gogame.h gs_globals.h \
 	imagehandler.h komispinbox.hm isc.h newaigamedlg.h setting.h sgf.h sgfparser.h \
@@ -304,8 +305,8 @@ FORMS = analyze_gui.ui autodiags_gui.ui boardwindow_gui.ui clientwindow_gui.ui d
 	figuredlg_gui.ui gameinfo_gui.ui gui_dialog.ui greeterwindow_gui.ui \
 	newgame_gui.ui newlocalgame_gui.ui newvariantgame_gui.ui \
 	normaltools_gui.ui nthmove_gui.ui preferences_gui.ui newaigamedlg_gui.ui scoretools_gui.ui \
-	slideview_gui.ui svgview_gui.ui sgfpreview.ui talk_gui.ui textedit_gui.ui twoaigamedlg_gui.ui \
-	textview_gui.ui
+	slideshow_gui.ui slideview_gui.ui slideshow_gui.ui svgview_gui.ui sgfpreview.ui talk_gui.ui \
+	textedit_gui.ui textview_gui.ui tutorial.cpp twoaigamedlg_gui.ui
 
 RESOURCES = q4go.qrc
 FORMHEADERS = $(FORMS:%.ui=ui_%.h)
@@ -481,6 +482,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/textview.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/textview.moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/timing.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/tutorial.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/tutorial.moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/variantgamedlg.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/variantgamedlg.moc.Po@am__quote@
 
