--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -32,6 +32,7 @@ jobs:
       - uses: actions/checkout@v1
         with:
           fetch-depth: 1
+          ref: upstreambranch
       - name: Checkout submodules
         env:
           vc_arch: ${{ matrix.msvc_arch }}
