--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -43,6 +43,7 @@ jobs:
       - uses: actions/checkout@v1
         with:
           fetch-depth: 1
+          ref: upstreambranch
       - name: Checkout submodules
         shell: cmd
         env:
