--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -40,16 +40,12 @@ jobs:
           target: ${{ matrix.qt_target }}
           # Architecture for Windows/Android
           arch: ${{ matrix.qt_arch }}
-      - uses: actions/checkout@v1
+          
+      - uses: actions/checkout@v2
         with:
-          fetch-depth: 1
           ref: upstreambranch
-      - name: Checkout submodules
-        shell: cmd
-        env:
-          vc_arch: ${{ matrix.msvc_arch }}
-        run: |
-          git submodule update --init --recursive
+          submodules: true
+          
       - name: build-msvc
         shell: cmd
         env:
