(*)fix .pro path for qmake

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -57,6 +57,7 @@ jobs:
           qmake -r CONFIG+=release CONFIG+=qtquickcompiler ..\src\q5go.pro
           nmake
           dir
+          dir release
           cd ..
       - name: package
         env:
@@ -64,7 +65,9 @@ jobs:
           archiveName: ${{ env.targetName }}-${{ matrix.qt_arch }}
         shell: pwsh
         run: |
+          dir
           New-Item -ItemType Directory ${env:archiveName}
+          dir
           Copy-Item build\Release\${env:targetName}'.exe' ${env:archiveName}\
           windeployqt --qmldir . ${env:archiveName}\${env:targetName}'.exe'
           Compress-Archive -Path ${env:archiveName} ${env:archiveName}'.zip'
