(*)fix artifact path on macOS

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -2,7 +2,7 @@ name: MacOS
 on: 
   push:
     branches:
-      - 'upstreambranch'
+      - ${{ github.ref }}
     paths-ignore:
       - 'README.md'
       - 'LICENSE'
@@ -31,31 +31,29 @@ jobs:
       
       - uses: actions/checkout@v2
         with:
-          ref: upstreambranch
+          ref: ${{ github.ref }}
           submodules: true
           
       - name: build macos
         run: |
-          pwd && ls -l
           mkdir build
           cd build
           qmake -r CONFIG+=release CONFIG+=qtquickcompiler ../src/${{ env.targetName }}.pro
           make -j 2
-          pwd && ls -l
           cd ..
           
       - name: package
         run: |
-          pwd && ls -l
           cd build
-          pwd && ls -l
           macdeployqt "${{ env.targetName }}.app" -qmldir=. -verbose=1 -dmg
+          pwd && ls -l
+          cd ..
           
       - name: Upload artifact
         uses: actions/upload-artifact@v1.0.0
         with:
           name: ${{ env.targetName }}-macOS
-          path: "build/src/${{ env.targetName }}.dmg"
+          path: "build/${{ env.targetName }}.dmg"
 
       - name: queryRelease
         id: queryReleaseMacos
