--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -2,7 +2,7 @@ name: Windows
 on: 
   push:
     branches:
-      - 'upstreambranch'
+      - ${{ github.ref }}
     paths-ignore:
       - 'README.md'
       - 'LICENSE'
@@ -43,7 +43,7 @@ jobs:
           
       - uses: actions/checkout@v2
         with:
-          ref: upstreambranch
+          ref: ${{ github.ref }}
           submodules: true
           
       - name: build-msvc
