--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -1,8 +1,6 @@
 name: MacOS
 on: 
   push:
-    branches:
-      - ${{ github.ref }}
     paths-ignore:
       - 'README.md'
       - 'LICENSE'
@@ -31,7 +29,7 @@ jobs:
       
       - uses: actions/checkout@v2
         with:
-          ref: ${{ github.ref }}
+          ref: ${{ github.head_ref }}
           submodules: true
           
       - name: build macos
