--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,8 +1,6 @@
 name: Windows
 on: 
   push:
-    branches:
-      - ${{ github.ref }}
     paths-ignore:
       - 'README.md'
       - 'LICENSE'
@@ -43,7 +41,7 @@ jobs:
           
       - uses: actions/checkout@v2
         with:
-          ref: ${{ github.ref }}
+          ref: ${{ github.head_ref }}
           submodules: true
           
       - name: build-msvc
