--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,9 +8,9 @@ KDE_OPTIONS = qtonly
 
 DISTHEADERS_MOC = analyzedlg.h audio.h autodiagsdlg.h bitarray.h board.h clickableviews.h \
 	clockview.h dbdialog.h evalgraph.h figuredlg.h gamedialog.h gamestable.h gametree.h greeterwindow.h \
-	helpviewer.h igsconnection.h mainwindow.h clientwin.h miscdialogs.h msg_handler.h normaltools.h \
-	scoretools.h parser.h playertable.h preferences.h qgo.h qgo_interface.h qgtp.h sizegraphicsview.h \
-	slideview.h sgfpreview.h tables.h telnet.h textview.h tutorial.h variantgamedlg.h
+	helpviewer.h igsconnection.h mainwindow.h clientwin.h miscdialogs.h msg_handler.h multisave.h \
+	normaltools.h scoretools.h parser.h playertable.h preferences.h qgo.h qgo_interface.h qgtp.h \
+	sizegraphicsview.h slideview.h sgfpreview.h tables.h telnet.h textview.h tutorial.h variantgamedlg.h
 
 DISTHEADERS_NOMOC = goboard.h config.h defines.h grid.h goboard.h gogame.h gs_globals.h \
 	imagehandler.h komispinbox.hm isc.h newaigamedlg.h setting.h sgf.h sgfparser.h \
@@ -20,13 +20,13 @@ DISTSOURCES = analyzedlg.cpp audio.cpp autodiagsdlg.cpp board.cpp clockview.cpp 
 		figuredlg.cpp goboard.cc gogame.cc gamedialog.cpp gamestable.cpp gametree.cpp grid.cpp \
 		greeterwindow.cpp helpviewer.cpp igsconnection.cpp imagehandler.cpp main.cpp \
 		clientwin.cpp mainwindow.cpp \
-		misc.cpp msg_handler.cpp parser.cpp \
+		misc.cpp msg_handler.cpp multisave.cpp parser.cpp \
 		playertable.cpp preferences.cpp qgo.cpp qgo_interface.cpp qgtp.cpp \
 		newaigamedlg.cpp setting.cpp  sgfload.cc sgf2board.cc sgfpreview.cpp \
 		slideview.cpp svgbuilder.cpp tables.cpp telnet.cpp textview.cpp timing.cpp variantgamedlg.cpp
 
 FORMS = analyze_gui.ui autodiags_gui.ui boardwindow_gui.ui clientwindow_gui.ui dbdialog_gui.ui enginedlg_gui.ui \
-	figuredlg_gui.ui gameinfo_gui.ui gui_dialog.ui greeterwindow_gui.ui \
+	figuredlg_gui.ui gameinfo_gui.ui gui_dialog.ui greeterwindow_gui.ui multisave_gui.ui \
 	newgame_gui.ui newlocalgame_gui.ui newvariantgame_gui.ui \
 	normaltools_gui.ui nthmove_gui.ui preferences_gui.ui newaigamedlg_gui.ui scoretools_gui.ui \
 	slideshow_gui.ui slideview_gui.ui slideshow_gui.ui svgview_gui.ui sgfpreview.ui talk_gui.ui \
