--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -75,13 +75,13 @@ am__objects_1 = analyzedlg.$(OBJEXT) audio.$(OBJEXT) \
 	greeterwindow.$(OBJEXT) helpviewer.$(OBJEXT) \
 	igsconnection.$(OBJEXT) imagehandler.$(OBJEXT) main.$(OBJEXT) \
 	clientwin.$(OBJEXT) mainwindow.$(OBJEXT) misc.$(OBJEXT) \
-	msg_handler.$(OBJEXT) parser.$(OBJEXT) playertable.$(OBJEXT) \
-	preferences.$(OBJEXT) qgo.$(OBJEXT) qgo_interface.$(OBJEXT) \
-	qgtp.$(OBJEXT) newaigamedlg.$(OBJEXT) setting.$(OBJEXT) \
-	sgfload.$(OBJEXT) sgf2board.$(OBJEXT) sgfpreview.$(OBJEXT) \
-	slideview.$(OBJEXT) svgbuilder.$(OBJEXT) tables.$(OBJEXT) \
-	telnet.$(OBJEXT) textview.$(OBJEXT) timing.$(OBJEXT) \
-	variantgamedlg.$(OBJEXT)
+	msg_handler.$(OBJEXT) multisave.$(OBJEXT) parser.$(OBJEXT) \
+	playertable.$(OBJEXT) preferences.$(OBJEXT) qgo.$(OBJEXT) \
+	qgo_interface.$(OBJEXT) qgtp.$(OBJEXT) newaigamedlg.$(OBJEXT) \
+	setting.$(OBJEXT) sgfload.$(OBJEXT) sgf2board.$(OBJEXT) \
+	sgfpreview.$(OBJEXT) slideview.$(OBJEXT) svgbuilder.$(OBJEXT) \
+	tables.$(OBJEXT) telnet.$(OBJEXT) textview.$(OBJEXT) \
+	timing.$(OBJEXT) variantgamedlg.$(OBJEXT)
 am__objects_2 =
 am_q5go_OBJECTS = $(am__objects_1) $(am__objects_2)
 am__objects_3 = tutorial.$(OBJEXT)
@@ -95,14 +95,15 @@ am__objects_4 = analyzedlg.moc.$(OBJEXT) audio.moc.$(OBJEXT) \
 	helpviewer.moc.$(OBJEXT) igsconnection.moc.$(OBJEXT) \
 	mainwindow.moc.$(OBJEXT) clientwin.moc.$(OBJEXT) \
 	miscdialogs.moc.$(OBJEXT) msg_handler.moc.$(OBJEXT) \
-	normaltools.moc.$(OBJEXT) scoretools.moc.$(OBJEXT) \
-	parser.moc.$(OBJEXT) playertable.moc.$(OBJEXT) \
-	preferences.moc.$(OBJEXT) qgo.moc.$(OBJEXT) \
-	qgo_interface.moc.$(OBJEXT) qgtp.moc.$(OBJEXT) \
-	sizegraphicsview.moc.$(OBJEXT) slideview.moc.$(OBJEXT) \
-	sgfpreview.moc.$(OBJEXT) tables.moc.$(OBJEXT) \
-	telnet.moc.$(OBJEXT) textview.moc.$(OBJEXT) \
-	tutorial.moc.$(OBJEXT) variantgamedlg.moc.$(OBJEXT)
+	multisave.moc.$(OBJEXT) normaltools.moc.$(OBJEXT) \
+	scoretools.moc.$(OBJEXT) parser.moc.$(OBJEXT) \
+	playertable.moc.$(OBJEXT) preferences.moc.$(OBJEXT) \
+	qgo.moc.$(OBJEXT) qgo_interface.moc.$(OBJEXT) \
+	qgtp.moc.$(OBJEXT) sizegraphicsview.moc.$(OBJEXT) \
+	slideview.moc.$(OBJEXT) sgfpreview.moc.$(OBJEXT) \
+	tables.moc.$(OBJEXT) telnet.moc.$(OBJEXT) \
+	textview.moc.$(OBJEXT) tutorial.moc.$(OBJEXT) \
+	variantgamedlg.moc.$(OBJEXT)
 am__objects_5 = $(am__objects_3) $(am__objects_4)
 am__objects_6 = q4go.rcc.$(OBJEXT)
 am__objects_7 = $(am__objects_6)
@@ -284,9 +285,9 @@ q5go_METASOURCES = AUTO
 KDE_OPTIONS = qtonly
 DISTHEADERS_MOC = analyzedlg.h audio.h autodiagsdlg.h bitarray.h board.h clickableviews.h \
 	clockview.h dbdialog.h evalgraph.h figuredlg.h gamedialog.h gamestable.h gametree.h greeterwindow.h \
-	helpviewer.h igsconnection.h mainwindow.h clientwin.h miscdialogs.h msg_handler.h normaltools.h \
-	scoretools.h parser.h playertable.h preferences.h qgo.h qgo_interface.h qgtp.h sizegraphicsview.h \
-	slideview.h sgfpreview.h tables.h telnet.h textview.h tutorial.h variantgamedlg.h
+	helpviewer.h igsconnection.h mainwindow.h clientwin.h miscdialogs.h msg_handler.h multisave.h \
+	normaltools.h scoretools.h parser.h playertable.h preferences.h qgo.h qgo_interface.h qgtp.h \
+	sizegraphicsview.h slideview.h sgfpreview.h tables.h telnet.h textview.h tutorial.h variantgamedlg.h
 
 DISTHEADERS_NOMOC = goboard.h config.h defines.h grid.h goboard.h gogame.h gs_globals.h \
 	imagehandler.h komispinbox.hm isc.h newaigamedlg.h setting.h sgf.h sgfparser.h \
@@ -296,13 +297,13 @@ DISTSOURCES = analyzedlg.cpp audio.cpp autodiagsdlg.cpp board.cpp clockview.cpp 
 		figuredlg.cpp goboard.cc gogame.cc gamedialog.cpp gamestable.cpp gametree.cpp grid.cpp \
 		greeterwindow.cpp helpviewer.cpp igsconnection.cpp imagehandler.cpp main.cpp \
 		clientwin.cpp mainwindow.cpp \
-		misc.cpp msg_handler.cpp parser.cpp \
+		misc.cpp msg_handler.cpp multisave.cpp parser.cpp \
 		playertable.cpp preferences.cpp qgo.cpp qgo_interface.cpp qgtp.cpp \
 		newaigamedlg.cpp setting.cpp  sgfload.cc sgf2board.cc sgfpreview.cpp \
 		slideview.cpp svgbuilder.cpp tables.cpp telnet.cpp textview.cpp timing.cpp variantgamedlg.cpp
 
 FORMS = analyze_gui.ui autodiags_gui.ui boardwindow_gui.ui clientwindow_gui.ui dbdialog_gui.ui enginedlg_gui.ui \
-	figuredlg_gui.ui gameinfo_gui.ui gui_dialog.ui greeterwindow_gui.ui \
+	figuredlg_gui.ui gameinfo_gui.ui gui_dialog.ui greeterwindow_gui.ui multisave_gui.ui \
 	newgame_gui.ui newlocalgame_gui.ui newvariantgame_gui.ui \
 	normaltools_gui.ui nthmove_gui.ui preferences_gui.ui newaigamedlg_gui.ui scoretools_gui.ui \
 	slideshow_gui.ui slideview_gui.ui slideshow_gui.ui svgview_gui.ui sgfpreview.ui talk_gui.ui \
@@ -450,6 +451,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/miscdialogs.moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/msg_handler.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/msg_handler.moc.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/multisave.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/multisave.moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/newaigamedlg.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/normaltools.moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/parser.Po@am__quote@
