--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -27,7 +27,7 @@ jobs:
             msvc_arch: x86
             qt_arch_install: msvc2017
     env:
-      targetName: q5Go
+      targetName: q5go
     steps:
       - name: Install Qt
         uses: jurplel/install-qt-action@v2.0.0
@@ -64,11 +64,12 @@ jobs:
         shell: pwsh
         run: |
           dir
-          New-Item -ItemType Directory ${env:archiveName}
-          dir
-          Copy-Item build\Release\${env:targetName}'.exe' ${env:archiveName}\
-          windeployqt --qmldir . ${env:archiveName}\${env:targetName}'.exe'
-          Compress-Archive -Path ${env:archiveName} ${env:archiveName}'.zip'
+          New-Item -ItemType Directory tmp-install
+          New-Item -ItemType Directory tmp-install\${env:archiveName}
+          dir tmp-install
+          Copy-Item build\Release\${env:targetName}'.exe' tmp-install\${env:archiveName}\
+          windeployqt --qmldir . tmp-install\${env:archiveName}\${env:targetName}'.exe'
+          Compress-Archive -Path tmp-install ${env:archiveName}'.zip'
           $name = ${env:archiveName}
           echo "::set-env name=packageName::$name"
           Write-Host 'packageName:'${env:packageName}
