--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         qt_ver: [5.14.2]
         qt_target: [desktop]
-        qt_arch: [win64_msvc2017_64, win32_msvc2017]
+        qt_arch: [win64_msvc2017_64, win32_msvc2017, win64_mingw73]
         include:
           - qt_arch: win64_msvc2017_64
             msvc_arch: x64
@@ -26,6 +26,8 @@ jobs:
           - qt_arch: win32_msvc2017
             msvc_arch: x86
             qt_arch_install: msvc2017
+          - qt_arch: win64_mingw73
+            qt_arch_install: mingw64
     env:
       targetName: q5go
     steps:
@@ -38,12 +40,12 @@ jobs:
           target: ${{ matrix.qt_target }}
           # Architecture for Windows/Android
           arch: ${{ matrix.qt_arch }}
-          
+
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.head_ref }}
           submodules: true
-          
+
       - name: build-msvc
         shell: cmd
         env:
