Don't run vcvarsall for mingw

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -50,8 +50,11 @@ jobs:
         shell: cmd
         env:
           vc_arch: ${{ matrix.msvc_arch }}
+          qt_arch: ${{ matrix.qt_arch }}
         run: |
-          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" %vc_arch%
+	  if (${env:qt_arch} -ne mingw73) {
+	     call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" %vc_arch%
+	  }
           mkdir build
           cd build
           qmake -r CONFIG+=release CONFIG+=qtquickcompiler ..\src\q5go.pro
