--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -50,9 +50,8 @@ jobs:
         shell: cmd
         env:
           vc_arch: ${{ matrix.msvc_arch }}
-          qt_arch: ${{ matrix.qt_arch }}
         run: |
-	  if (${env:qt_arch} -ne mingw73) {
+	  if (${{ matrix.qt_arch }} -ne mingw73) {
 	     call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" %vc_arch%
 	  }
           mkdir build
