--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -51,12 +51,19 @@ jobs:
         shell: cmd
         env:
           vc_arch: ${{ matrix.msvc_arch }}
+          qt_arch: ${{ matrix.qt_arch }}
         run: |
-          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" %vc_arch%
+          if ( %qt_arch% -ne win64_mingw73 ) {
+              call "C:\Progrm Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" %vc_arch%
+          }
           mkdir build
           cd build
           qmake -r CONFIG+=release CONFIG+=qtquickcompiler ..\src\q5go.pro
-          nmake
+          if ( %qt_arch% -eq win64_mingw73 ) {
+              make
+          } else {
+              nmake
+          }
           dir
           dir release
           cd ..
