--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -5,11 +5,13 @@ on:
       - 'README.md'
       - 'LICENSE'
       - '.github/workflows/windows.yml'
+      - '.github/workflows/mingw.yml'
   pull_request:
     paths-ignore:
       - 'README.md'
       - 'LICENSE'
       - '.github/workflows/windows.yml'
+      - '.github/workflows/mingw.yml'
 jobs:
   build:
     name: Build
