--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -54,7 +54,7 @@ jobs:
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" %vc_arch%
           mkdir build
           cd build
-          qmake -r CONFIG+=release CONFIG+=qtquickcompiler ..\src\q5go.pro
+          qmake -r CONFIG+=release CONFIG+=qtquickcompiler ..\src\q5go.pro DEFINES+=GITHUB_CI_BUILD
           nmake
           dir
           dir release
